# django-modelcluster

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  ruff.toml  runtests.py  setup.py  shell.py  tox.ini
.github/: report_nightly_build_failure.py
.github/workflows/: nightly.yml  publish.yml  test.yml
modelcluster/: datetime_utils.py  fields.py  forms.py  models.py  queryset.py  tags.py  utils.py
modelcluster/contrib/: taggit.py
tests/: models.py  settings.py
tests/fixtures/: parentalmanytomany-to-ordered-model.json
tests/migrations/: 0001_initial.py  0002_add_m2m_models.py  0002_barmodel_foomodel.py  0003_gallery_galleryimage.py  0004_auto_20170406_1734.py  0005_article_fk_to_newspaper.py  0006_auto_20171109_0614.py  0007_add_bandmember_favourite_restaurant.py  0007_auto_20180420_0539.py  0007_prefetch_related_tests.py  0008_prefetch_related_tests.py  0009_article_related_articles.py  0010_song.py  0011_add_room_features.py  0011_auto_20200816_2001.py  0012_add_record_label.py  0012_band_manager.py  0013_add_log_category.py  0014_comment_alter_article_related_articles_and_more.py
tests/tests/: __init__.py  test_cluster.py  test_cluster_form.py  test_copy_child_relations.py  test_copy_cluster.py  test_fixture_loading.py  test_formset.py  test_serialize.py  test_tag.py
